--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,6 +251,7 @@ if(BUILD_SHARED_LIBS)
     else(UNIX) # windows
         # export all symobols from windows DLL
         set_target_properties(nanodbc PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
+        install_pdb(nanodbc)
     endif(UNIX)
 endif()
 
